  * Complete ATSC signalization, as defined in A/65, is now supported.
  * NorDig-private descriptors are supported.
  * Added option --power-mode to "tsdektec" and output plugin "dektec".
  * Added options --build-service-list-descriptors and --default-service-type
    to plugin "nit".
  * Added options --start and --stop to plugin "trigger".
  * Service id or name is now optional in plugin "svrename". When omitted, the
    default service is the first one in the PAT.
  * On Linux, multi-standard tuners are now supported (for instance tuners
    which support DVB-T and DVB-C). The options --delivery-system is used
    to select the appropriate type. Multi-standard tuners are not supported
    on Windows.

[BUG] Bug fixes:

  * In plugin "hides", the bandwidth was incorrectly set to 5 MHz when 6 MHz
    was requested.
  * In plugin "continuity", packets were incorrectly detected as duplicate
    when they had the same continuity counter but distinct content.
  * Fixed HEVC_video_descriptor to latest version of ISO 13818-1 standard.

-------------------------------------------------------------------------------

VERSION 3.18-1360

[NEW] New commands and plugins:

  * Added plugin "craft" as input to build specifically crafted packets and as
    packet processor to similarly alter packets in transit.
  * Added plugin "trigger" which executes actions on selected labeled TS
    packets.
  * Added plugin "cutoff" which sets labels on TS packets upon reception of
    UDP messages.
  * Added plugin "psimerge" which merges PSI/SI from mixed streams.

[IMP] Improvements on existing commands and plugins:

  * Added option --only-label to all packet processing plugins. There is a
    new possibility to mark individual packets with a label which can be
    reused in other plugins.
  * Added options --label, --set-label, --reset-label, --set-permanent-label,
    --reset-permanent-label, --nullified, --input-stuffing, --every, --interval
    to plugin "filter".