@@ -26,10 +26,6 @@
 // THE POSSIBILITY OF SUCH DAMAGE.
 //
 //----------------------------------------------------------------------------
-//
-//  IP v4 address class
-//
-//----------------------------------------------------------------------------
 
 #include "tsSocketAddress.h"
 TSDUCK_SOURCE;
